[gd_scene load_steps=8 format=2]

[ext_resource path="res://files/assets/uipack_fixed/Bonus/switch3.ogg" type="AudioStream" id=1]
[ext_resource path="res://files/Fonts/Concert_One/ConcertOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://files/scenes/options/Options.gd" type="Script" id=3]
[ext_resource path="res://files/assets/onscreencontrols/Sprites/transparentDark/transparentDark22.png" type="Texture" id=5]

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HSlider/AudioStreamPlayer2D:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HSlider2/AudioStreamPlayer2D:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HSlider3/AudioStreamPlayer2D:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="DynamicFont" id=5]
size = 75
font_data = ExtResource( 2 )

[node name="Options" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TouchScreenButton" parent="."]
position = Vector2( 54, 50 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="HSlider3" type="HSlider" parent="."]
margin_left = 85.823
margin_top = 260.0
margin_right = 831.823
margin_bottom = 300.0
rect_scale = Vector2( 1.75, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HSlider3"]
margin_left = 756.133
margin_top = -30.0
margin_right = 1011.13
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HSlider3"]
stream = ExtResource( 1 )
volume_db = -80.0

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 79.823
margin_top = 828.0
margin_right = 825.823
margin_bottom = 868.0
rect_scale = Vector2( 1.75, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HSlider2"]
margin_left = 756.133
margin_top = -30.0
margin_right = 1011.13
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HSlider2"]
stream = ExtResource( 1 )
bus = "SFX"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 83.8234
margin_top = 547.269
margin_right = 829.823
margin_bottom = 587.269
rect_scale = Vector2( 1.75, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSlider"]
margin_left = 756.133
margin_top = -30.0
margin_right = 1011.13
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Music"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HSlider"]
stream = ExtResource( 1 )
bus = "Music"
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="HSlider3" to="." method="_on_HSlider3_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
